@@ -79,8 +79,13 @@ var DEFAULTS = {
   metricsInterval: '30s',
   metricsLimit: 1000,
   opentelemetryBridgeEnabled: false,
-  sanitizeFieldNames: ['password', 'passwd', 'pwd', 'secret', '*key', '*token*',
-    '*session*', '*credit*', '*card*', '*auth*', 'set-cookie',
+  sanitizeFieldNames: [
+    // These patterns are specified in the shared APM specs:
+    // https://github.com/elastic/apm/blob/main/specs/agents/sanitization.md
+    'password', 'passwd', 'pwd', 'secret', '*key', '*token*',
+    '*session*', '*credit*', '*card*', '*auth*', 'set-cookie', '*principal*',
+    // These are default patterns only in the Node.js APM agent, historically
+    // from when the "is-secret" dependency was used.
     'pw', 'pass', 'connect.sid'
   ],
   serviceNodeName: undefined,
